--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="styles/styles.css">
 
+</head>
+
+<body>
+<header>
+    <img class src="assets/buurtcampus-oost.png" alt="buurtcampus-oost">
+    <img src="assets/BuurtcampusFooter.svg" alt="footer">
+</header>
+<main>
+    <h1>
+        De Stekjesbieb
+    </h1>
+</main>
+</body>
