--- a/index.html
+++ b/index.html
@@ -23,39 +23,41 @@
             <button class="button1">Post hier je plant!</button>
             <form id="form"> 
                 <input type="search" id="query" name="q" placeholder="Zoeken">
-                <button class="button2"><img src="assets/zoek-icon.png" alt="zoek-icon"></button>
+                <button class="button2"></button>
+                <img src="assets/zoek-icon.png" alt="zoek-icon">
               </form>
         </div>
-        <div class="deel1">
-            <img src="assets/plant1.jpg" alt="plant1">
-            <h2>Rita Oosterhout</h2>
-            <p>Hier is mijn koffieplantje, ik geef hem om de 3 dagen water.</p>
-        </div>
-        <div class="deel2">
-            <img src="assets/plant2.jpg" alt="plant2">
-            <h2>Jens Zonnebloem</h2>
-            <p>Dit is een fittonia die ik 2 weken terug van de stekjebieb heb gehaald.</p>
-        </div>
-        <div class="deel3">
-            <img src="assets/plant3.jpg" alt="plant3">
-            <h2>Bart Kastanje</h2>
-            <p>Mijn basilicum plantje.</p>
-        </div>
-        <div class="deel4">
-            <img src="assets/plant4.jpg" alt="plant4">
-            <h2>Harold Tulp</h2>
-            <p>Ik heb hier een varentje, ik hou hem steeds in de zon dus hij groeit mooi.</p>
-        </div>
-        <div class="deel5">
-            <img src="assets/plant5.jpg" alt="plant5">
-            <h2>Nel Eikenblad</h2>
-            <p>Dit is een kleine cactus die ik om heb geruild bij de stekjesbieb voor mijn fittonia.</p>
-        </div>
-        <div class="deel6">
-            <img src="assets/plant6.jpg" alt="plant6">
-            <h2>Suzan Brandnetel</h2>
-            <p>Ik vind deze plant heel mooi, heeft iemand tips over hoe ik deze kan verzorgen?</p>
-        </div>
+
+            <div class="deel" class="deel 1">
+                <img src="assets/plant1.jpg" alt="plant1">
+                <h2>Rita Oosterhout</h2>
+                <p>Hier is mijn koffieplantje, ik geef hem om de 3 dagen water.</p>
+            </div>
+            <div class="deel" class="deel 2">
+                <img src="assets/plant2.jpg" alt="plant2">
+                <h2>Jens Zonnebloem</h2>
+                <p>Dit is een fittonia die ik 2 weken terug van de stekjebieb heb gehaald.</p>
+            </div>
+            <div class="deel" class="deel 3">
+                <img src="assets/plant3.jpg" alt="plant3">
+                <h2>Bart Kastanje</h2>
+                <p>Mijn basilicum plantje.</p>
+            </div>
+            <div class="deel" class="deel 4">
+                <img src="assets/plant4.jpg" alt="plant4">
+                <h2>Harold Tulp</h2>
+                <p>Ik heb hier een varentje, ik hou hem steeds in de zon dus hij groeit mooi.</p>
+            </div>
+            <div class="deel" class="deel 5">
+                <img src="assets/plant5.jpg" alt="plant5">
+                <h2>Nel Eikenblad</h2>
+                <p>Dit is een kleine cactus die ik om heb geruild bij de stekjesbieb voor mijn fittonia.</p>
+            </div>
+            <div class="deel" class="deel 6">
+                <img src="assets/plant6.jpg" alt="plant6">
+                <h2>Suzan Brandnetel</h2>
+                <p>Ik vind deze plant heel mooi, heeft iemand tips over hoe ik deze kan verzorgen?</p>
+            </div>
     </div>
 </main>
 </body>
