Achtergrond veranderd en buttons verbeterd

--- a/index.html
+++ b/index.html
@@ -23,9 +23,11 @@
             <button class="button1">Post hier je plant!</button>
             <form id="form"> 
                 <input type="search" id="query" name="q" placeholder="Zoeken">
-                <button class="button2"></button>
-                <img src="assets/zoek-icon.png" alt="zoek-icon">
               </form>
+              <button class="button2">  
+                <img src="assets/zoek-icon.png" alt="zoek-icon">
+              </button>
+              
         </div>
 
             <div class="deel" class="deel 1">
