--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
     </h1>
     <div class="wit-midden-stuk">
         <div class="bovenste-balk">
-            <button class="button1">Post hier je plant!</button>
+            <button type=button class="button1">Post hier je plant!</button>
             <form id="form"> 
                 <input type="search" id="query" name="q" placeholder="Zoeken">
               </form>
-              <button class="button2">  
+              <button type=button class="button2">  
                 <img src="assets/zoek-icon.png" alt="zoek-icon">
               </button>
               
