--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>De Stekjesbieb</title>
-    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="./styles/contact.css">
 
 </head>
 
@@ -15,21 +15,27 @@
     <header>
         <div class="header-links">
         <a class="logo" href="https://www.buurtcampusoost.nl/s/" target="_blank"> 
-            <img src="assets/header1.png" alt="footer">
+            <img src="./assets/header1.png" alt="logo">
         </a>
-        <a class="headerb meerweten" href="/meer-weten">
-            Meer Weten
+        <a class="headerb home" href="home.html">
+            Home
         </a>
-        <a class="headerb locatie" href="/locatie">
+        <a class="headerb meerweten" href="meer-weten.html">
+            Meer weten
+        </a>
+        <a class="headerb locatie" href="locatie.html">
             Locatie
         </a>
-        <a class="headerb contact" href="/contact">
+        <a class="headerb contact" href="contact.html">
             Contact
         </a>  
         </div>
         
         <a class="menu">
-            <img src="assets/menu.png" alt="menu">
+            <img src="./assets/menu.png" alt="menu">
         </a>
     
     </header>
+    <div class="wit-midden-stuk">
+
+    </div>
