--- a/meer-weten.html
+++ b/meer-weten.html
@@ -17,13 +17,16 @@
         <a class="logo" href="https://www.buurtcampusoost.nl/s/" target="_blank"> 
             <img src="./assets/header1.png" alt="logo">
         </a>
-        <a class="headerb meerweten" href="/meer-weten">
-            Meer Weten
+        <a class="headerb home" href="home.html">
+            Home
         </a>
-        <a class="headerb locatie" href="/locatie">
+        <a class="headerb meerweten" href="meer-weten.html">
+            Meer weten
+        </a>
+        <a class="headerb locatie" href="locatie.html">
             Locatie
         </a>
-        <a class="headerb contact" href="/contact">
+        <a class="headerb contact" href="contact.html">
             Contact
         </a>  
         </div>
@@ -33,3 +36,6 @@
         </a>
     
     </header>
+    <div class="wit-midden-stuk"> 
+
+    </div>
