--- a/locatie.html
+++ b/locatie.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>De Stekjesbieb</title>
-    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="./styles/locatie.css">
 
 </head>
 
@@ -15,21 +15,30 @@
     <header>
         <div class="header-links">
         <a class="logo" href="https://www.buurtcampusoost.nl/s/" target="_blank"> 
-            <img src="assets/header1.png" alt="footer">
+            <img src="./assets/header1.png" alt="logo">
         </a>
-        <a class="headerb meerweten" href="/meer-weten">
-            Meer Weten
+        <a class="headerb home" href="home.html">
+            Home
         </a>
-        <a class="headerb locatie" href="/locatie">
+        <a class="headerb meerweten" href="meer-weten.html">
+            Meer weten
+        </a>
+        <a class="headerb locatie" href="locatie.html">
             Locatie
         </a>
-        <a class="headerb contact" href="/contact">
+        <a class="headerb contact" href="contact.html">
             Contact
         </a>  
         </div>
         
         <a class="menu">
-            <img src="assets/menu.png" alt="menu">
+            <img src="./assets/menu.png" alt="menu">
         </a>
     
     </header>
+    <div class="wit-midden-stuk">
+        <div class="kaart">
+           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2436.760857491861!2d4.994709815237514!3d52.356622456077424!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c60ebddba2b29b%3A0x31329a4052666b7e!2sDiemerparklaan%2079%2C%201087%20EB%20Amsterdam!5e0!3m2!1snl!2snl!4v1669977787227!5m2!1snl!2snl" 
+        width="600" height="600" margin="50" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+    </div>
