--- a/home.html
+++ b/home.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>De Stekjesbieb</title>
+    <title>Plant Swap</title>
     <link rel="stylesheet" href="styles/home.css" />
     <script src="styles/home.js" defer></script>
+    <link rel="icon" href="assets/Logo.png">
   </head>
 
   <body>
@@ -21,14 +22,14 @@
             <img src="assets/header1.png" alt="footer" />
           </a>
           <a class="headerb home" href="home.html"> Home </a>
-          <a class="headerb meerweten" href="meer-weten.html"> Meer weten </a>
+          <a class="headerb meerweten" href="meer-weten.html"> Hoe het werkt</a>
           <a class="headerb locatie" href="locatie.html"> Locatie </a>
           <a class="headerb contact" href="contact.html"> Contact </a>
         </div>
 
-        <a class="menu">
+        <!-- <a class="menu">
           <img src="assets/menu.png" alt="menu" />
-        </a>
+        </a> -->
       </header>
       <div class="wit-midden-stuk">
         <div class="antwoordlijst">
@@ -49,6 +50,8 @@
           <label for="text">Achternaam:</label>
           <input type="text">
           <br>
+          <label for="Email">Email:</label>
+          <input type="Email">
 </div>
         </div>
 
