--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
         <a class="logo" href="https://www.buurtcampusoost.nl/s/" target="_blank"> 
             <img src="./assets/header1.png" alt="logo">
         </a>
-        <a class="headerb home" href="home.html">
+        <a class="headerb home" href="index.html">
             Home
         </a>
         <a class="headerb meerweten" href="meer-weten.html">
