--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           >
             <img src="assets/header1.png" alt="footer" />
           </a>
-          <a class="headerb home" href="home.html"> Home </a>
+          <a class="headerb home" href="index.html"> Home </a>
           <a class="headerb meerweten" href="meer-weten.html"> Hoe het werkt</a>
           <a class="headerb locatie" href="locatie.html"> Locatie </a>
           <a class="headerb contact" href="contact.html"> Contact </a>
